syntax = "proto3";
package pb;


enum AuctionType {
    FIRST_PRICE = 0;
    SECOND_PRICE = 1;
    FIXED_PRICE = 2;
}

message VarintMsg {
    int32 argI32 = 1;
    int64 argI64 = 2;
    uint32 argUI32 = 3;
    uint64 argUI64 = 4;
    sint32 argSI32 = 5;
    sint64 argSI64 = 6;
    AuctionType argEnum = 7;
}
message Bit64 {
    fixed64 argFixed64 = 1;
    sfixed64 argSFixed64 = 2;
    double argDouble = 3;
}

message Bit32 {
    fixed32 argFixed32 = 1;
    sfixed32 argSFixed32 = 2;
    float argFloat = 3;
}

message Simple {
    int32 argI32 = 1;
    uint32 argUI32 = 2;
    bool argBool = 3;
}

message Repeat {
    repeated bool argBoolList = 1;
    repeated int32 argI32List = 2;
    repeated uint32 argUI32List = 3;
    repeated sint32 argSI32List = 4;
    repeated string argStrList = 5;
    repeated bytes argByList = 6;
    repeated Simple argSimple = 7;
}


message Map {
    map<int32, int32> argII = 1;
    map<uint32, uint32> argUI = 2;
    map<string, string> argSS = 3;
    map<string, uint32> argSU = 4;
}

message LenPayload {
    map<string, int32> argMap = 1;
    string argStr = 2;
    bytes argBytes = 3;
    Bit64 argBit64 = 4;
    Bit32 argBit32 = 5;
}